# student-dropout-prediction

./: .gitignore  LICENSE  README.md  Sprint1-3.ipynb  pyproject.toml  requirements.txt  sprint4_dashboard.html
.github/workflows/: ci.yml
api/: main.py  schemas.py
notebooks/: Sprint1-3.ipynb  dropout_eda.py
src/dropout_prediction/: __init__.py  data.py  evaluate.py  features.py  models.py  predict.py  resampling.py  train.py
tests/: conftest.py  test_api.py  test_data.py  test_features.py  test_models.py  test_predict.py
